# vonage-pipecat-serializer-voice-aws-agentcore

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  OBSERVABILITY_ENHANCEMENTS.md  README.md  docker-compose.yml
.cursor/rules/: project-context.mdc
answer/: Dockerfile  answer.py  requirements.txt  server.py
app/: Dockerfile  README.md  agent.py  main.py  observability.py  pyproject.toml  requirements.txt  voice_serializer_bridge.py
blog/: AI Voice Agents with Vonage, Pipecat & AgentCore.txt  blog-post.md
lambda/: answer.py  requirements.txt  server.py
runtime/: agent.py  requirements.txt
scripts/: generate_architecture_diagram.py
tests/: README.md
tests/c1_voice_call_bootstrap/: README.md  requirements.txt  test_voice_bootstrap.py
tests/c1_vonage_video_session/: README.md  test_session.py
tests/c2_video_connector_sdk/: Dockerfile  README.md  requirements.txt  test_connector.py
tests/c2_voice_linux_sdk/: Dockerfile  README.md  requirements.txt  test_connector.py  test_voice_linux_sdk.py
tests/c3_pipecat_serializer/: Dockerfile  README.md  requirements.txt  serializer_echo_bot.py
tests/c3_pipecat_transport/: Dockerfile  README.md  echo_bot.py  requirements.txt
tests/c4a_aws_bedrock/: Dockerfile  README.md  bedrock_echo_agent.py  bedrock_transport_integration.py  test_integration.py
tests/c4a_bedrock_preflight/: Dockerfile  README.md  bedrock_echo_agent.py  bedrock_serializer_integration.py  requirements.txt  test_bedrock.py  test_integration.py
tests/c4b_bedrock_nova_sonic/: Dockerfile  README.md  bedrock_echo_agent.py  bedrock_transport_integration.py  requirements.txt  test_bedrock.py  test_integration.py
tests/c4b_bedrock_nova_sonic_serializer/: Dockerfile  README.md  bedrock_echo_agent.py  bedrock_serializer_integration.py  requirements.txt  test_integration.py
tests/c5_agentcore/: README.md  hello_agent.py  requirements.txt  test_agentcore.py
tests/c5_agentcore_runtime/: README.md
tests2/: README.md  run_all.py
tests2/c10_runtime_expiry_and_retry/: README.md  requirements.txt  test_c10_runtime_expiry_and_retry.py
tests2/c11_runtime_concurrency/: README.md  requirements.txt  test_c11_runtime_concurrency.py
tests2/c13_security_and_compliance/: README.md  requirements.txt  test_c13_security_and_compliance.py
tests2/c14_quota_and_region_matrix/: README.md  requirements.txt  test_c14_quota_and_region_matrix.py
tests2/c5_pipecat_agentcore_ws/: README.md
tests2/c6_agentcore_ws_serializer_smoke/: README.md  bot.py  bot_requirements.txt  test_c6_agentcore_ws_serializer_smoke.py
tests2/c7_lambda_answer_presigned_ncco/: README.md  requirements.txt  test_c7_lambda_answer_presigned_ncco.py
tests2/c8_runtime_end_to_end_single_call/: README.md  requirements.txt  test_c8_runtime_end_to_end_single_call.py
tests2/c8b_runtime_bargein_disconnect/: README.md  requirements.txt  test_c8b_runtime_bargein_disconnect.py
tests2/c9_runtime_session_correlation/: README.md  requirements.txt  test_c9_runtime_session_correlation.py
