[project]
name = "vonage-pipecat-aws-agentcore-app"
version = "0.1.0"
description = "Real-time AI voice/video agent — Vonage + Pipecat + AWS Nova Sonic + AgentCore"
requires-python = ">=3.13,<3.14"

dependencies = [
    # Vonage Voice SDK transport
    "vonage>=4.0.0",
    
    # Pipecat AI framework from Vonage source (matches validated C3/C4 test setup)
    "pipecat-ai[aws,aws-nova-sonic,silero,webrtc] @ git+https://github.com/Vonage/pipecat.git",

    # AWS SDK
    "boto3>=1.34.0",

    # AWS Bedrock AgentCore Runtime
    "bedrock-agentcore>=0.1.0",

    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
