[project]
name = "vonage-pipecat-serializer-voice-aws-agentcore-app"
version = "0.1.0"
description = "Real-time AI voice agent — Vonage Serializer + Voice SDK + AWS Nova Sonic + AgentCore"
requires-python = ">=3.13"

dependencies = [
    # Pipecat AI framework from Vonage source (matches validated C3/C4 test setup)
    "pipecat-ai[aws,aws-nova-sonic,silero] @ git+https://github.com/Vonage/pipecat.git",

    # AWS SDK
    "boto3>=1.34.0",

    # AWS Bedrock AgentCore Runtime
    "bedrock-agentcore>=0.1.0",

    # Web server
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    
    # Observability: OpenTelemetry + Prometheus
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
